--- a/themes/classic.css
+++ b/themes/classic.css
@@ -1,4 +1,31 @@
-﻿.calc_content_wrap
+﻿#bar_wrap {
+  border: 1px solid #1C1C1C;
+  background-color: #313131;
+  -webkit-box-shadow: 0 0 1px #666, inset 0 1px 1px #222;
+  -moz-box-shadow: 0 0 1px #666, inset 0 1px 1px #222;
+  -o-box-shadow: 0 0 1px #666, inset 0 1px 1px #222;
+  box-shadow: 0 0 1px #666, inset 0 1px 1px #222;
+  background-image: -webkit-linear-gradient(#323232, #2E2E2E 50%, #323232);
+  background-image: -moz-linear-gradient(#323232, #2E2E2E 50%, #323232);
+  background-image: -o-linear-gradient(#323232, #2E2E2E 50%, #323232);
+}
+.bar {
+   
+}
+.captions {
+  color: #FDFDFD;
+  padding: 5px 2px 0;
+  font: 11px/14px sans-serif;
+  text-shadow: 0 1px 0 #000;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+
+.calc_content_wrap
 {
     width: 100%;
     margin: 0 auto;
@@ -19,6 +46,117 @@
 .green_bg
 {
     background: #0b5294;
+}
+
+#bulk_button {
+	float:left;
+	width:99%;
+	margin-bottom: 5px;
+	text-align: center;
+	-moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px;
+    vertical-align:middle;
+}
+
+.abunda_text {
+	color:White;
+	width:100%;
+	margin-left:auto;
+	margin-right:auto;
+	font-size: medium;
+	font-weight: bold;
+	clear:none;
+	float:left;
+	margin:5px;
+	vertical-align:middle;
+}
+
+#bulk_likea_button 
+{
+    clear:none;
+    color:White;
+    font-size:medium;
+    font-weight:bold;
+    margin-left:auto;
+    margin-right: auto;
+    width:33%;
+    background: green;
+    padding:4px;
+    
+    border:1px solid black;
+    cursor:pointer;
+    vertical-align:middle;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#bulk_close
+{
+    clear:none;
+    color:White;
+    font-size:medium;
+    font-weight:bold;
+    width:auto;
+    background: #0b5294;
+    padding:4px;
+    float:left;
+    border:1px solid black;
+    cursor:pointer;
+    float:left;
+    margin:10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#bulk_submit
+{
+    clear:none;
+    color:White;
+    font-size:medium;
+    font-weight:bold;
+    width:auto;
+    background: #0b5294;
+    padding:4px;
+    float:left;
+    border:1px solid black;
+    cursor:pointer;
+    float:right;
+    margin:10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#bulk {
+	float:left;
+	width:99%;
+	margin-bottom: 5px;
+	text-align: center;
+	-moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px;
+    vertical-align:middle;
+    display:none;
+}
+
+#bulk pre {
+	color:Black;
+	width:33%;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#bulk_upload {
+	width: 80%;
+	line-height: 20px;
 }
 
 #second_content
