--- a/themes/classic.css
+++ b/themes/classic.css
@@ -134,6 +134,18 @@
     clear: none;
 }
 
+#gadget_abundatrade div.product_holder #header_condition
+{
+    background: white;
+    border: medium none;
+    height: 30px;
+    margin-left: 16px;
+    margin-top: 4px;
+    width: 150px;
+    z-index: 1;
+    clear: none;
+}
+
 #gadget_abundatrade div.submit_holder
 {
     float: right;
@@ -514,7 +526,6 @@ SECTION 3 & 4 - Table
 .td_image
 {
     float: left;
-    width: 25%;
     height: 98%;
 }
 
